Checking in latest SDK.

--- a/pages/code/asdocs/all-classes.html
+++ b/pages/code/asdocs/all-classes.html
@@ -46,16 +46,10 @@
 <td><a href="com/whirled/AvatarControl.html">AvatarControl</a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/AVRGameAvatar.html">AVRGameAvatar</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/AVRGameControl.html">AVRGameControl</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/AVRGameControlEvent.html">AVRGameControlEvent</a></td>
-</tr>
-<tr>
 <td><a href="com/whirled/BackdropControl.html">BackdropControl</a></td>
+</tr>
+<tr>
+<td><a href="com/threerings/flash/BackgroundJPGEncoder.html">BackgroundJPGEncoder</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/game/BagsSubControl.html">BagsSubControl</a></td>
@@ -178,6 +172,9 @@
 <td><a href="com/threerings/util/Iterator.html"><i>Iterator</i></a></td>
 </tr>
 <tr>
+<td><a href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
 <td><a href="com/threerings/util/KeyboardCodes.html">KeyboardCodes</a></td>
 </tr>
 <tr>
@@ -223,9 +220,6 @@
 <td><a href="com/threerings/util/MethodQueue.html">MethodQueue</a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/MobControl.html">MobControl</a></td>
-</tr>
-<tr>
 <td><a href="com/threerings/util/MultiLoader.html">MultiLoader</a></td>
 </tr>
 <tr>
@@ -256,13 +250,7 @@
 <td><a href="com/whirled/game/PlayerSubControl.html">PlayerSubControl</a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/PropControl.html">PropControl</a></td>
-</tr>
-<tr>
 <td><a href="com/whirled/game/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/QuestControl.html">QuestControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/Random.html">Random</a></td>
@@ -311,9 +299,6 @@
 </tr>
 <tr>
 <td><a href="com/whirled/game/StateChangedEvent.html">StateChangedEvent</a></td>
-</tr>
-<tr>
-<td><a href="com/whirled/StateControl.html">StateControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/StreamableArrayList.html">StreamableArrayList</a></td>
