--- a/pages/code/asdocs/all-index-B.html
+++ b/pages/code/asdocs/all-index-B.html
@@ -55,6 +55,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("BÂ
      Create a BackdropControl.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/BackgroundJPGEncoder.html">BackgroundJPGEncoder</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Class that will encode a jpeg in the background and fire an event when it's done.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/BackgroundJPGEncoder.html#BackgroundJPGEncoder()">BackgroundJPGEncoder</a>(image, quality, timeSlice) &mdash; Constructor in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/BackgroundJPGEncoder.html">BackgroundJPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Construct a jpeg encoder.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html#BACKQUOTE">BACKQUOTE</a> &mdash; Constant static property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html">KeyboardCodes</a></td>
 </tr>
 <tr>
@@ -148,6 +162,24 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("BÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Byte.html#Byte()">Byte</a>(value) &mdash; Constructor in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Byte.html">Byte</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#_bytenew">_bytenew</a> &mdash; Property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#_byteout">_byteout</a> &mdash; Property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> Byte array to contain the jpg while encoding is in progress.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#_bytepos">_bytepos</a> &mdash; Property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
