--- a/pages/code/asdocs/all-index-J.html
+++ b/pages/code/asdocs/all-index-J.html
@@ -41,6 +41,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("JÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Class for compressing bitmaps into jpegs.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#JPGEncoder()">JPGEncoder</a>(image, quality, pixelGranularity) &mdash; Constructor in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+  Construct a new JPGEncoder object.</td>
+</tr>
+<tr>
 <td style="padding-bottom:20px" colspan="2"></td>
 </tr>
 <tr>
