--- a/pages/code/asdocs/all-index-W.html
+++ b/pages/code/asdocs/all-index-W.html
@@ -80,6 +80,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("WÂ
      those identified as winners at the end of the game.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#writeHeader()">writeHeader</a>() &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+  Write the jpeg header into the byte array for output.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/langBoolean.html#writeObject()">writeObject</a>(out) &mdash; Method in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/langBoolean.html">langBoolean</a></td>
 </tr>
 <tr>
