--- a/pages/code/asdocs/all-index-X.html
+++ b/pages/code/asdocs/all-index-X.html
@@ -53,12 +53,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("XÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/AVRGameAvatar.html#x">x</a> &mdash; Property in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/AVRGameAvatar.html">AVRGameAvatar</a></td>
-</tr>
-<tr>
-<td width="20"></td><td> The avatar's x position.</td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html#X">X</a> &mdash; Constant static property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/KeyboardCodes.html">KeyboardCodes</a></td>
 </tr>
 <tr>
@@ -77,6 +71,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("XÂ
 <tr>
 <td width="20"></td><td>
      Call toXMLString() on the specified XML object safely.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html#_xpos">_xpos</a> &mdash; Property in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/JPGEncoder.html">JPGEncoder</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td style="padding-bottom:20px" colspan="2"></td>
