--- a/pages/code/asdocs/com/threerings/flash/class-list.html
+++ b/pages/code/asdocs/com/threerings/flash/class-list.html
@@ -34,6 +34,9 @@
 <td><a href="AnimationManager.html">AnimationManager</a></td>
 </tr>
 <tr>
+<td><a href="BackgroundJPGEncoder.html">BackgroundJPGEncoder</a></td>
+</tr>
+<tr>
 <td><a href="CameraSnapshotter.html">CameraSnapshotter</a></td>
 </tr>
 <tr>
@@ -68,6 +71,9 @@
 </tr>
 <tr>
 <td><a href="ImageUtil.html">ImageUtil</a></td>
+</tr>
+<tr>
+<td><a href="JPGEncoder.html">JPGEncoder</a></td>
 </tr>
 <tr>
 <td><a href="KeyRepeatLimiter.html">KeyRepeatLimiter</a></td>
