--- a/pages/code/asdocs/com/threerings/flash/package-detail.html
+++ b/pages/code/asdocs/com/threerings/flash/package-detail.html
@@ -63,47 +63,55 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
  Manages animations.</td>
 </tr>
 <tr class="prow0">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CameraSnapshotter.html">CameraSnapshotter</a></td><td class="summaryTableLastCol">&nbsp;</td>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="BackgroundJPGEncoder.html">BackgroundJPGEncoder</a></td><td class="summaryTableLastCol">
+ Class that will encode a jpeg in the background and fire an event when it's done.</td>
 </tr>
 <tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CameraSnapshotter.html">CameraSnapshotter</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ClearingTextField.html">ClearingTextField</a></td><td class="summaryTableLastCol">
  A simple TextField with a method for setting text that will auto-clear.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ColorUtil.html">ColorUtil</a></td><td class="summaryTableLastCol">
  Color utility methods.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DisablingButton.html">DisablingButton</a></td><td class="summaryTableLastCol">
  A SimpleButton subclass that includes a disabledState.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DisplayUtil.html">DisplayUtil</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="Easing.html">Easing</a></td><td class="summaryTableLastCol">
  Some easing functions.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="FilterUtil.html">FilterUtil</a></td><td class="summaryTableLastCol">
  Useful utility methods that wouldn't be needed if the flash API were not so retarded.</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="FloatingTextAnimation.html">FloatingTextAnimation</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="FPSDisplay.html">FPSDisplay</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="FrameSprite.html">FrameSprite</a></td><td class="summaryTableLastCol">
  Convenience superclass to use for sprites that need to update every frame.</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="GraphicsUtil.html">GraphicsUtil</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ImageUtil.html">ImageUtil</a></td><td class="summaryTableLastCol">
  Image and Bitmap related utility functions.</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="JPGEncoder.html">JPGEncoder</a></td><td class="summaryTableLastCol">
+ Class for compressing bitmaps into jpegs.</td>
 </tr>
 <tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="KeyRepeatLimiter.html">KeyRepeatLimiter</a></td><td class="summaryTableLastCol">
