--- a/pages/code/contrib/asdocs/all-index-A.html
+++ b/pages/code/contrib/asdocs/all-index-A.html
@@ -349,6 +349,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html#ALWAYS_COMPRESS">ALWAYS_COMPRESS</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html">Chunker</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> A compression strategy that always compresses the data, regardless of whether it
+     saved any space.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/TurnTimer.html#_amInControl">_amInControl</a> &mdash; Property in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/TurnTimer.html">TurnTimer</a></td>
 </tr>
 <tr>
