--- a/pages/code/contrib/asdocs/all-index-N.html
+++ b/pages/code/contrib/asdocs/all-index-N.html
@@ -126,6 +126,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("NÂ
 <td width="20"></td><td> Creates a new net array.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html#NEVER_COMPRESS">NEVER_COMPRESS</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html">Chunker</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> A compression strategy that says: don't ever even waste time trying to compress.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/trick/class-list.html');" href="com/whirled/contrib/card/trick/BidEvent.html#newEventType()">newEventType</a>(type) &mdash; Static method in class com.whirled.contrib.card.trick.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/trick/class-list.html');" href="com/whirled/contrib/card/trick/BidEvent.html">BidEvent</a></td>
 </tr>
 <tr>
