--- a/pages/code/contrib/asdocs/all-index-T.html
+++ b/pages/code/contrib/asdocs/all-index-T.html
@@ -602,6 +602,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#TRANSITION_INSERT">TRANSITION_INSERT</a> &mdash; Constant static property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#TRANSITION_POP">TRANSITION_POP</a> &mdash; Constant static property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
 </tr>
 <tr>
@@ -727,6 +733,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 </tr>
 <tr>
 <td width="20"></td><td> Utility function to truncate a name.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html#TRY_COMPRESS">TRY_COMPRESS</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html">Chunker</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> A compression stragegy that tries to compress the data, but only sends the compressed
+     form if it would actually result in sending less chunks.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/PlayerSprite.html#_turn">_turn</a> &mdash; Property in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/PlayerSprite.html">PlayerSprite</a></td>
