--- a/pages/code/contrib/asdocs/com/whirled/contrib/RemoteEntity.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/RemoteEntity.html
@@ -330,7 +330,7 @@ showHideInherited();
 <p>
 <span class="label">See also</span>
 </p>
-<div class="seeAlso">AvatarControl.PROP_MEMBER_ID</div>
+<div class="seeAlso">EntityControl.PROP_MEMBER_ID</div>
 </div>
 <a name="getName()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -349,7 +349,7 @@ showHideInherited();
 <p>
 <span class="label">See also</span>
 </p>
-<div class="seeAlso">ActorControl.PROP_NAME</div>
+<div class="seeAlso">EntityControl.PROP_NAME</div>
 </div>
 <a name="getOrientation()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
