--- a/pages/code/asdocs/com/whirled/AbstractSubControl.html
+++ b/pages/code/asdocs/com/whirled/AbstractSubControl.html
@@ -41,7 +41,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="classHeaderTableLabel">Inheritance</td><td class="inheritanceList">AbstractSubControl <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../images/inherit-arrow.gif"> <a href="AbstractControl.html">AbstractControl</a> <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../images/inherit-arrow.gif"> flash.events.EventDispatcher</td>
 </tr>
 <tr>
-<td class="classHeaderTableLabel">Subclasses</td><td><a href="game/BagsSubControl.html">BagsSubControl</a>, <a href="game/GameSubControl.html">GameSubControl</a>, <a href="game/LocalSubControl.html">LocalSubControl</a>, <a href="../whirled/MobControl.html">MobControl</a>, <a href="game/NetSubControl.html">NetSubControl</a>, <a href="game/PlayerSubControl.html">PlayerSubControl</a>, <a href="../whirled/QuestControl.html">QuestControl</a>, <a href="game/SeatingSubControl.html">SeatingSubControl</a>, <a href="game/ServicesSubControl.html">ServicesSubControl</a>, <a href="../whirled/StateControl.html">StateControl</a></td>
+<td class="classHeaderTableLabel">Subclasses</td><td><a href="game/BagsSubControl.html">BagsSubControl</a>, <a href="game/GameSubControl.html">GameSubControl</a>, <a href="game/LocalSubControl.html">LocalSubControl</a>, <a href="game/NetSubControl.html">NetSubControl</a>, <a href="game/PlayerSubControl.html">PlayerSubControl</a>, <a href="game/SeatingSubControl.html">SeatingSubControl</a>, <a href="game/ServicesSubControl.html">ServicesSubControl</a></td>
 </tr>
 </table>
 <p></p>
