--- a/pages/code/asdocs/com/whirled/ActorControl.html
+++ b/pages/code/asdocs/com/whirled/ActorControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../print.css" type="text/css" media="print">
-<meta content="ActorControl,com.whirled.ActorControl,PROP_NAME,PROP_ORIENTATION,getOrientation,getState,isMoving,setLogicalLocation,setMoveSpeed,setOrientation,setPixelLocation,setState" name="keywords">
+<meta content="ActorControl,com.whirled.ActorControl,getOrientation,getState,isMoving,setLogicalLocation,setMoveSpeed,setOrientation,setPixelLocation,setState" name="keywords">
 <title>com.whirled.ActorControl</title>
 </head>
 <body>
@@ -248,7 +248,8 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="EntityControl.html#hasControl()">hasControl</a>():Boolean</div>
 <div class="summaryTableDescription">
-     Deletes this entity from the player's inventory and removed it from the room.</div>
+     Is this client in control?
+          <p>Control is a mutually exclusive lock across all instances of the entity (i.e.</div>
 </td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedMethod">
@@ -544,7 +545,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a onclick="javascript:setInheritedVisible(true,'Constant');" href="#constantSummary" class="showHideLink"><img src="../../images/collapsed.gif" class="showHideLinkImage"> Show Inherited Public Constants</a>
 </div>
 </div>
-<table id="summaryTableConstant" class="summaryTable " cellpadding="3" cellspacing="0">
+<table id="summaryTableConstant" class="summaryTable hideInheritedConstant" cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Constant</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
@@ -566,17 +567,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
      The entity's location in pixel coordinates (an Array [ x, y, z ]).</div>
 </td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
 </tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static]
-     The non-unique display name of the entity for avatars and pets.</div>
-</td><td class="summaryTableOwnerCol">ActorControl</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static] The entity facing direction (a Number).</div>
-</td><td class="summaryTableOwnerCol">ActorControl</td>
+<tr class="hideInheritedConstant">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="EntityControl.html#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static] The unique Whirled player ID of the owner on an avatar (int).</div>
+</td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="EntityControl.html#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, AVATAR, PET or FURNI.</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="EntityControl.html#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static] The non-unique display name of the entity (a String).</div>
+</td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
+</tr>
+<tr class="hideInheritedConstant">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="EntityControl.html#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static] The entity facing direction (a Number).</div>
+</td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
+</tr>
+<tr class="hideInheritedConstant">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="EntityControl.html#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
 </td><td class="summaryTableOwnerCol"><a href="EntityControl.html">EntityControl</a></td>
 </tr>
 <tr class="hideInheritedConstant">
@@ -850,27 +854,6 @@ showHideInherited();
      name: state name
      value: unused
           </p></div>
-<a name="constantDetail"></a>
-<div class="detailSectionHeader">Constant detail</div>
-<a name="PROP_NAME"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">PROP_NAME</td><td class="detailHeaderType">constant</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public static const PROP_NAME:String = "std:name"</code><p>
-     The non-unique display name of the entity for avatars and pets.
-     Invalid entity types will return null. Use with getEntityProperty().
-     </p></div>
-<a name="PROP_ORIENTATION"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">PROP_ORIENTATION</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>public static const PROP_ORIENTATION:String = "std:orientation"</code><p> The entity facing direction (a Number). Use with getEntityProperty(). </p></div>
 <br>
 <br>
 <hr>
