--- a/pages/code/asdocs/com/whirled/EntityControl.html
+++ b/pages/code/asdocs/com/whirled/EntityControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../print.css" type="text/css" media="print">
-<meta content="EntityControl,com.whirled.EntityControl,PROP_DIMENSIONS,PROP_HOTSPOT,PROP_LOCATION_LOGICAL,PROP_LOCATION_PIXEL,PROP_TYPE,TYPE_AVATAR,TYPE_FURNI,TYPE_PET,canEditRoom,clearPopup,dispatchCtrlEvent,getCamera,getDefaultDataPack,getEntityIds,getEntityProperty,getInstanceId,getLogicalLocation,getMemories,getMicrophone,getMyEntityId,getPixelLocation,getRoomBounds,getRoomProperties,getRoomProperty,getViewerName,hasControl,lookupMemory,registerPropertyProvider,requestControl,sendMessage,sendSignal,setHotSpot,setRoomProperty,setTickInterval,showPopup,triggerAction,updateMemory" name="keywords">
+<meta content="EntityControl,com.whirled.EntityControl,PROP_DIMENSIONS,PROP_HOTSPOT,PROP_LOCATION_LOGICAL,PROP_LOCATION_PIXEL,PROP_MEMBER_ID,PROP_NAME,PROP_ORIENTATION,PROP_TYPE,TYPE_AVATAR,TYPE_FURNI,TYPE_PET,canEditRoom,clearPopup,dispatchCtrlEvent,getCamera,getDefaultDataPack,getEntityIds,getEntityProperty,getInstanceId,getLogicalLocation,getMemories,getMicrophone,getMyEntityId,getPixelLocation,getRoomBounds,getRoomProperties,getRoomProperty,getViewerName,hasControl,lookupMemory,registerPropertyProvider,requestControl,sendMessage,sendSignal,setHotSpot,setRoomProperty,setTickInterval,showPopup,triggerAction,updateMemory" name="keywords">
 <title>com.whirled.EntityControl</title>
 </head>
 <body>
@@ -224,7 +224,8 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="#hasControl()">hasControl</a>():Boolean</div>
 <div class="summaryTableDescription">
-     Deletes this entity from the player's inventory and removed it from the room.</div>
+     Is this client in control?
+          <p>Control is a mutually exclusive lock across all instances of the entity (i.e.</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="hideInheritedMethod">
@@ -471,7 +472,19 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, AVATAR, PET or FURNI.</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_MEMBER_ID">PROP_MEMBER_ID</a> : String = "std:member_id"<div class="summaryTableDescription">[static] The unique Whirled player ID of the owner on an avatar (int).</div>
+</td><td class="summaryTableOwnerCol">EntityControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_NAME">PROP_NAME</a> : String = "std:name"<div class="summaryTableDescription">[static] The non-unique display name of the entity (a String).</div>
+</td><td class="summaryTableOwnerCol">EntityControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_ORIENTATION">PROP_ORIENTATION</a> : String = "std:orientation"<div class="summaryTableDescription">[static] The entity facing direction (a Number).</div>
+</td><td class="summaryTableOwnerCol">EntityControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#PROP_TYPE">PROP_TYPE</a> : String = "std:type"<div class="summaryTableDescription">[static] The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.</div>
 </td><td class="summaryTableOwnerCol">EntityControl</td>
 </tr>
 <tr class="">
@@ -896,8 +909,14 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public function hasControl():Boolean</code><p>
-     Deletes this entity from the player's inventory and removed it from the room.
-     </p><p></p>
+     Is this client in control?
+          </p><p>Control is a mutually exclusive lock across all instances of the entity (i.e. running in
+     other browsers across the network). Only one client can hold the lock at any time.</p>
+          <p>Note: control is <em>not</em> automatically assigned. If an entity wishes to obtain
+     control, it should first call <code>requestControl</code> and it will then receive a
+     <code>GOT_CONTROL</code> event if and when control has been assigned to this client.
+     There are no guarantees which of the requesting clients will receive it, or when.</p>
+     <p></p>
 <span class="label">Returns</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
@@ -1442,8 +1461,7 @@ showHideInherited();
 <div class="detailBody">
 <code>public static const PROP_LOCATION_LOGICAL:String = "std:location_logical"</code><p>
      The entity's location in logical coordinates (an Array [ x, y, z ]). x, y, and z are Numbers
-     between 0 and 1 or null if our location is unknown. Use with getEntityProperty().
-     </p></div>
+     between 0 and 1 or null if our location is unknown. Use with getEntityProperty(). </p></div>
 <a name="PROP_LOCATION_PIXEL"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1454,8 +1472,34 @@ showHideInherited();
 <code>public static const PROP_LOCATION_PIXEL:String = "std:location_pixel"</code><p>
      The entity's location in pixel coordinates (an Array [ x, y, z ]). Obviously there is not a
      real Z coordinate, but the value will coorrespond to real Z distance in proportion to the
-     distance in X and Y. Use with getEntityProperty().
-     </p></div>
+     distance in X and Y. Use with getEntityProperty(). </p></div>
+<a name="PROP_MEMBER_ID"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">PROP_MEMBER_ID</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const PROP_MEMBER_ID:String = "std:member_id"</code><p> The unique Whirled player ID of the owner on an avatar (int).
+     Querying this on non-avatars returns null. Use with getEntityProperty(). </p></div>
+<a name="PROP_NAME"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">PROP_NAME</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const PROP_NAME:String = "std:name"</code><p> The non-unique display name of the entity (a String). Use with getEntityProperty().
+     Valid only for "avatar" and "pet" entity types. Invalid entity types will return null. </p></div>
+<a name="PROP_ORIENTATION"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">PROP_ORIENTATION</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const PROP_ORIENTATION:String = "std:orientation"</code><p> The entity facing direction (a Number). Use with getEntityProperty().
+     Valid only for "avatar" and "pet" entity types. </p></div>
 <a name="PROP_TYPE"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1463,7 +1507,8 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const PROP_TYPE:String = "std:type"</code><p> The type of the entity, AVATAR, PET or FURNI. Use with getEntityProperty(). </p></div>
+<code>public static const PROP_TYPE:String = "std:type"</code><p> The type of the entity, TYPE_AVATAR, TYPE_PET or TYPE_FURNI.
+     Use with getEntityProperty(). </p></div>
 <a name="TYPE_AVATAR"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
