--- a/pages/code/asdocs/com/whirled/game/NetSubControl.html
+++ b/pages/code/asdocs/com/whirled/game/NetSubControl.html
@@ -232,12 +232,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TO_ALL">TO_ALL</a> : int = 0<div class="summaryTableDescription">[static]
-     Constant provided to {</div>
+     Constant provided to <code>sendMessage</code> that will send a message to all subscribers.</div>
 </td><td class="summaryTableOwnerCol">NetSubControl</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#TO_SERVER_AGENT">TO_SERVER_AGENT</a> : int = -2.147483648E9<div class="summaryTableDescription">[static]
-     Constant provided to {</div>
+     Constant provided to <code>sendMessage</code> that will send a message to the game's server
+     agent, if there is one.</div>
 </td><td class="summaryTableOwnerCol">NetSubControl</td>
 </tr>
 </table>
@@ -327,9 +328,20 @@ showHideInherited();
 <td class="paramSpacer">&nbsp;</td>
 </tr>
 <tr>
-<td width="20px"></td><td><code><span class="label">playerId</span>:int</code> &mdash; if {</td>
+<td width="20px"></td><td><code><span class="label">playerId</span>:int</code> &mdash; if <code>TO_ALL</code> (or unset), sends to all players, 
+     otherwise the message will be private to just one player; if the game employs a server agent, 
+     <code>TO_SERVER_AGENT</code> may be used to send a message only to the server.
+     </td>
 </tr>
 </table>
+<p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../game/NetSubControl.html#TO_ALL" target="">TO_ALL</a>
+<br>
+<a href="../game/NetSubControl.html#TO_SERVER_AGENT" target="">TO_SERVER_AGENT</a>
+</div>
 </div>
 <a name="sendMessageToAgent()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -340,7 +352,8 @@ showHideInherited();
 <div class="detailBody">
 <code>public function sendMessageToAgent(messageName:String, value:Object):void</code><p>
      Send a message privately to the game's server agent, if there is one. This is a shortcut 
-     for calling {</p><span class="label">Parameters</span>
+     for calling <code>sendMessage</code> with playerId set to <code>TO_SERVER_AGENT</code>.
+          </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">messageName</span>:String</code> &mdash; The message to send.
@@ -354,6 +367,14 @@ showHideInherited();
      </td>
 </tr>
 </table>
+<p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../game/NetSubControl.html#sendMessage()" target="">sendMessage()</a>
+<br>
+<a href="../game/NetSubControl.html#TO_SERVER_AGENT" target="">TO_SERVER_AGENT</a>
+</div>
 </div>
 <a name="set()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -617,7 +638,14 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static const TO_ALL:int = 0</code><p>
-     Constant provided to {</p></div>
+     Constant provided to <code>sendMessage</code> that will send a message to all subscribers.
+     </p><p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../game/NetSubControl.html#sendMessage()" target="">sendMessage()</a>
+</div>
+</div>
 <a name="TO_SERVER_AGENT"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -626,7 +654,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static const TO_SERVER_AGENT:int = -2.147483648E9</code><p>
-     Constant provided to {</p></div>
+     Constant provided to <code>sendMessage</code> that will send a message to the game's server
+     agent, if there is one.
+     </p><p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../game/NetSubControl.html#sendMessage()" target="">sendMessage()</a>
+</div>
+</div>
 <br>
 <br>
 <hr>
